Consolidate command processing code into common library